tests/Checker/everything/errors/8a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *8: incompatible type for return
Compilation was unsuccessful.
